[fix] image in jumbotron adn overflow-x of body

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,10 +5,11 @@
 body {
     color: white;
     font-family: "Bebas Neue", sans-serif;
+    overflow-x: hidden;
 }
 
 a:hover {
-    color: rgba(123,35,65,0.84);
+    color: rgba(123, 35, 65, 0.84);
 }
 
 a::before {
@@ -19,7 +20,7 @@ a::before {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: rgba(123,35,65,0.84);
+    background-color: rgba(123, 35, 65, 0.84);
     transform: scaleX(0);
     transition: transform 0.3s ease;
 }
@@ -33,8 +34,8 @@ header {
 }
 
 footer {
-    background: rgb(119,140,204);
-    background: linear-gradient(0deg, rgba(119,140,204,1) 0%, rgba(196,159,224,1) 100%);
+    background: rgb(119, 140, 204);
+    background: linear-gradient(0deg, rgba(119, 140, 204, 1) 0%, rgba(196, 159, 224, 1) 100%);
 }
 
 .homepage {
@@ -44,10 +45,11 @@ footer {
         height: 100vh;
         width: 100vw;
         background-image: url('https://cdn.vox-cdn.com/thumbor/jL8ReHQSfv7z9rDBN-yOs9y6qiI=/0x0:1440x1800/1200x675/filters:focal(605x785:835x1015)/cdn.vox-cdn.com/uploads/chorus_image/image/72868729/nicola_parisi_ninth_life_nov2023_0086.0.jpg');
-        object-fit: fill;
+        background-size: cover;
+        background-repeat: no-repeat;
         opacity: 85%;
 
-        span {
+        .log-line {
             font-size: 10rem;
             font-weight: 700;
             width: 70%;
@@ -56,16 +58,16 @@ footer {
 
     }
 
-    .grow { 
-        transition: all .3s ease-in-out; 
+    .grow {
+        transition: all .3s ease-in-out;
     }
-    
-    .grow:hover { 
-        transform: scale(1.1); 
+
+    .grow:hover {
+        transform: scale(1.1);
     }
 
     .card {
-        box-shadow: 0px 0px 23px 3px rgba(123,35,65,0.84);
+        box-shadow: 0px 0px 23px 3px rgba(123, 35, 65, 0.84);
         opacity: 80%;
     }
 
